# deployer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
corpus/: external.toml
corpus/golden/: golden.json
corpus/synthetic/ci-build/: expected.json  fixture.Dockerfile  fixture.ci.yml  target.json
corpus/synthetic/compose-redis/: expected.json  fixture.Dockerfile  fixture.compose.yaml  target.json
corpus/synthetic/entrypoint-override/: expected.json  fixture.Dockerfile  target.json
corpus/synthetic/extras-job/: expected.json  fixture.Dockerfile  target.json
corpus/synthetic/no-build-system/: expected.json  fixture.Dockerfile  target.json
corpus/synthetic/pip-requirements/: expected.json
corpus/synthetic/poetry-legacy/: expected.json  fixture.Dockerfile  target.json
corpus/synthetic/poetry-legacy/project/: main.py  pyproject.toml
corpus/synthetic/service-healthcheck/: expected.json
corpus/synthetic/slow-build/: expected.json  fixture.Dockerfile
corpus/synthetic/system-deps-psycopg2/: expected.json
corpus/synthetic/uv-minimal/: expected.json  fixture.Dockerfile
docs/: idea-deployer-subproject.md  idea-mlops-layer.md
docs/superpowers/plans/: 2026-07-04-deployer-mvp.md  (+14 more)
src/deployer/: __init__.py  artifacts.py  author.py  bench.py  cli.py  facts.py  hints.py  llm.py  models.py  runtime.py  verify.py
tests/: conftest.py  test_artifacts.py  test_author.py  test_bench.py  test_cli.py  test_corpus.py  test_facts.py  test_hints.py  test_llm.py  test_models.py  test_runtime.py  test_verify_docker.py  test_verify_run.py  test_verify_static.py
(+46 files in other folders)
