[project]
name = "deployer"
version = "0.1.0"
description = "Deploy-authoring agent: LLM authors artifacts, deterministic code verifies them"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50",
    "pydantic>=2.7",
    "pyyaml>=6.0.3",
]

[project.scripts]
deployer = "deployer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyrefly>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "docker: requires a container runtime (podman or docker)",
    "llm: requires ANTHROPIC_API_KEY and spends tokens",
]
addopts = "-m 'not docker and not llm'"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
project-excludes = [
    "tests/fixtures/**",
    "corpus/**",
]
