[tool.poetry]
name = "poetry-legacy"
version = "0.1.0"
description = "Legacy-format Poetry service fixture"
authors = ["deployer corpus <corpus@example.invalid>"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
